--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ body {
   'opsz' 24
 }
 
+.hidden {
+    display: none;
+}
+
 .cellContainer {
     display: flex;
     flex-direction: column;
@@ -112,6 +116,7 @@ body {
     background-color: var(--gray-bg-2);
     border-radius: 40px;
     overflow: hidden;
+    z-index: 1;
 }
 
 #cellsWrapper {
@@ -154,3 +159,83 @@ body {
 .trigger-scrollUp {
     animation: scrollUp 0.5s ease forwards;
 }
+
+#toggleSettingsBtn {
+    opacity: 0;
+    z-index: 2;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 15px;
+    cursor: pointer;
+    border: none;
+    box-shadow: none;
+    transition: 0.2s ease;
+}
+
+#toggleSettingsBtn:hover {
+    opacity: 0.6;
+}
+
+#settingsOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    backdrop-filter: blur(10px);
+    z-index: 2;
+}
+
+#settingsContainer {
+    position: fixed;
+    top: 10%;
+    left: 25%;
+    width: 50%;
+    height: fit-content;
+    background-color: var(--gray-bg-1);
+    border-radius: 30px;
+    box-shadow: 0 2px 15px rgba(0,0,0,0.15);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    z-index: 3;
+    h2 {
+        text-align: center;
+        font-size: 32px;
+    }
+    hr {
+        width: 100%;
+        background-color: var(--black-txt-1);
+        margin: 20px 0;
+    }
+}
+
+#saveSettingsBtn {
+    font-family: "Noto Sans", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 24px;
+    padding: 10px 20px;
+    border-radius: 15px;
+    margin-top: 40px;
+    border: solid 2px var(--gray-bg-2);
+    width: fit-content;
+    font-weight: 600;
+}
+
+.settingsGrid {
+    display: grid;
+    grid-template-columns: 1fr 30%;
+    justify-content: left;
+    gap: 10px;
+}
+
+#dayAndHourSelector {
+    display: flex;
+    gap: 20px;
+    margin-top: 10px;
+}
+
