--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --primary-bg-quinte: #EF9C81;
     --gray-bg-1: #D9D9D9;
     --gray-bg-2: #EBEBEB;
+    --gray-bg-3: #cecece;
     --black-txt-1: #202020;
     --black-txt-2: #1a1a1a;
 }
@@ -157,7 +158,7 @@ body {
 } 
 
 .trigger-scrollUp {
-    animation: scrollUp ease forwards;
+    animation: scrollUp linear forwards;
 }
 
 #toggleSettingsBtn {
@@ -224,6 +225,13 @@ body {
     border: solid 2px var(--gray-bg-2);
     width: fit-content;
     font-weight: 600;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#saveSettingsBtn:hover {
+    background-color: var(--gray-bg-3);
+    scale: 1.025;
 }
 
 .settingsGrid {
