fixed fonts error / fixed last interval not displaying bug / added admin page to upload csv / added php script to process and load csv to database / deprecated scripts/process_csv.py

--- a/styles/style.css
+++ b/styles/style.css
@@ -252,3 +252,9 @@ body {
     margin-top: 10px;
 }
 
+input[type="text"],
+input[type="password"],
+input[type="number"] {
+    border-radius: 5px;
+    border: solid 1px var(--black-txt-1);
+}
